public static class Literal
{
    public const string Scene_MainMenu = "MainMenu";
    public const string Scene_GameScene = "GameScene";
    public const string Scene_SelectCategory = "SelectCategory";

    public const string AnimTrigger_Idle = "Idle";
    public const string AnimBool_isVisible = "isVisible";
    public const string AnimBool_isHighlighted = "isHighlighted";
    public const string AnimBool_isWrong = "isWrong";
}
