public static class Literal
{
    public const string Scene_MainMenu = "MainMenu";
    public const string Scene_GameScene = "GameScene";
    public const string Scene_SelectCategory = "SelectCategory";

    public const string AnimTrigger_Idle = "Idle";
    public const string AnimBool_isVisible = "isVisible";
    public const string AnimBool_isHighlighted = "isHighlighted";
    public const string AnimBool_isWrong = "isWrong";
    public const string AnimBool_showPrompt = "showPrompt";
    public const string AnimName_NoCoins = "Message_pulse_NoCoins";
    public const string AnimName_NoLifes = "Message_pulse_NoLifes";
    public const string AnimName_NoPrompts = "Message_pulse_NoPrompts";
    public const string AnimName_NoBoardResets = "Message_pulse_NoBoardResets";
    public const string AnimName_NoCoinsForLifes = "Message_pulse_NoCoinsForLifes";

    public const string LayerMask_SquareBody = "SquareBody";
}
